; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_lencode.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_lencode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bson = type { i32 }

@LUA_TTABLE = common dso_local global i32 0, align 4
@encode_bson = common dso_local global i32 0, align 4
@LUA_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lencode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lencode(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.bson, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @lua_settop(i32* %5, i32 1)
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* @LUA_TTABLE, align 4
  %9 = call i32 @luaL_checktype(i32* %7, i32 1, i32 %8)
  %10 = call i32 @bson_create(%struct.bson* %4)
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* @encode_bson, align 4
  %13 = call i32 @lua_pushcfunction(i32* %11, i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @lua_pushvalue(i32* %14, i32 1)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @lua_pushlightuserdata(i32* %16, %struct.bson* %4)
  %18 = load i32*, i32** %3, align 8
  %19 = call i64 @lua_pcall(i32* %18, i32 2, i32 1, i32 0)
  %20 = load i64, i64* @LUA_OK, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %1
  %23 = call i32 @bson_destroy(%struct.bson* %4)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @lua_error(i32* %24)
  store i32 %25, i32* %2, align 4
  br label %30

26:                                               ; preds = %1
  %27 = call i32 @bson_destroy(%struct.bson* %4)
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @bson_meta(i32* %28)
  store i32 1, i32* %2, align 4
  br label %30

30:                                               ; preds = %26, %22
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32 @bson_create(%struct.bson*) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_pushlightuserdata(i32*, %struct.bson*) #1

declare dso_local i64 @lua_pcall(i32*, i32, i32, i32) #1

declare dso_local i32 @bson_destroy(%struct.bson*) #1

declare dso_local i32 @lua_error(i32*) #1

declare dso_local i32 @bson_meta(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
